Homelabing/Ingress-page/manifests/site-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hermitden-site
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hermitden-site
  template:
    metadata:
      labels:
        app: hermitden-site
    spec:
      imagePullSecrets:
        - name: gitea-registry-secret
      containers:
        - name: hermitden-site
          image: gitea.hermitden/virtualhermit/hermitden-site:083202a
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 128Mi
