Homelabing/Ingress-page/manifests/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: hermitden-ca-issuer
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - grafana.hermitden
      secretName: grafana-tls-secret
  rules:
    - host: grafana.hermitden
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-service
                port:
                  number: 3000
